# baseload

./: .gitignore  README.md  cross_comparison_colab.ipynb  dev.ipynb  main_after_mannheim.py  main_dev.py  main_model.py  main_no_gams.py  main_robustness.py  pyproject.toml  requirements.txt  requirements_old.txt  run_dashboard.py  run_model_dasboard.py  run_model_dashboard.py
dashboard/: __init__.py  components.py  dashboard.py  dashboard_minStorage.py  dashboard_model_results.py  data.py  dev copy.ipynb  dev.ipynb  dev_min_store.ipynb  graphs.py  profiles.py  queries.py
data/: .gitignore  artificial_countries.parquet  renewables_capacity.parquet  renewables_ninja_averages.parquet
figures/: descriptive_profile.xlsx  descriptive_profiles.xlsx  descriptive_statistics.xlsx  descriptive_statistics_daily.xlsx  descriptive_statistics_hourly.xlsx  descriptive_statistics_latex.xlsx
gams/: .gitignore  model.gms  res_baseload.gsp
model/: .gitignore  __init__.py  gams_model.py  model.gms  model.py  model_min_dispatchable.gms  model_min_storage.gms  res_baseload.gsp  runners.py  simulation.py  simulation_min_dispatch.py  simulation_min_storage.py  utils.py
model_no_gams/: __init__.py  model.py  utils.py
notebooks/: _tests.ipynb  average_demand_re.ipynb  core_simulations.ipynb  create_arifical_countries.ipynb  data_analysis.ipynb  gaps.xlsx  graphs_core_simulation.ipynb  graphs_paper_descriptives.ipynb  graphs_paper_descriptives_v2.ipynb  graphs_robustness.ipynb  on_demand_plots.ipynb  optimize_average.ipynb  optimize_without_model.ipynb  profile_graph.ipynb  test.xlsx  (+4 more)
